--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: "Nikomaxos AI Tools"
-url: "https://github.com/nikomaxos/ha-ai-middleware"
+url: "https://github.com/nikomaxos/ha-addons"
 maintainer: "Nikomaxos"
