--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: "Nikomaxos AI Tools"
+name: "Nikomaxos Home Assistant Addons"
 url: "https://github.com/nikomaxos/ha-addons"
 maintainer: "Nikomaxos"
