--- a/gemini_agent/config.yaml
+++ b/gemini_agent/config.yaml
@@ -1,6 +1,6 @@
 name: "HA AI Middleware"
-version: "1.0.0"
-slug: "ha_ai_middleware"
+version: "1.0.2"  # Άλλαξα λίγο το version για να δει αλλαγή
+slug: "gemini_agent"
 description: "Gemini AI Agent with full local access to config and history."
 url: "https://github.com/nikomaxos/ha-addons"
 arch:
@@ -18,4 +18,3 @@ schema:
   gemini_api_key: str
   prompt_entity: str
 homeassistant_api: true
-image: "python:3.11-alpine"
