--- a/gemini_agent/config.yaml
+++ b/gemini_agent/config.yaml
@@ -1,20 +1,21 @@
 name: "Gemini Agent"
-version: "1.0.20"
+version: "1.0.21"
 slug: "gemini_agent"
-description: "AI Agent for Home Assistant"
-url: "https://github.com/nikomaxos/ha-addons"
+description: "AI Agent with God Mode access"
+url: "https://github.com/your_repo"
+startup: application
+boot: auto
 arch:
   - aarch64
   - amd64
   - armv7
-startup: application
-boot: manual
-map:
-  - "config:rw"
+# --- ΤΑ ΚΛΕΙΔΙΑ ΤΟΥ ΒΑΣΙΛΕΙΟΥ ---
+hassio_api: true
+hassio_role: admin
+# --------------------------------
 options:
   gemini_api_key: ""
   prompt_entity: "input_text.gemini_prompt"
 schema:
   gemini_api_key: str
   prompt_entity: str
-homeassistant_api: true
