--- a/gemini_agent/config.yaml
+++ b/gemini_agent/config.yaml
@@ -1,21 +1,20 @@
 name: "Gemini Agent"
-version: "1.0.21"
+version: "1.0.22"
 slug: "gemini_agent"
-description: "AI Agent with God Mode access"
-url: "https://github.com/your_repo"
+description: "AI Agent with Native Configuration"
 startup: application
 boot: auto
 arch:
   - aarch64
   - amd64
   - armv7
-# --- ΤΑ ΚΛΕΙΔΙΑ ΤΟΥ ΒΑΣΙΛΕΙΟΥ ---
 hassio_api: true
 hassio_role: admin
-# --------------------------------
 options:
   gemini_api_key: ""
+  ha_token: ""  # <--- ΝΕΟ ΠΕΔΙΟ ΓΙΑ ΤΟ TOKEN
   prompt_entity: "input_text.gemini_prompt"
 schema:
   gemini_api_key: str
+  ha_token: str # <--- ΤΟ ΔΗΛΩΝΟΥΜΕ ΕΔΩ
   prompt_entity: str
