--- a/gemini_agent/config.yaml
+++ b/gemini_agent/config.yaml
@@ -1,20 +1,21 @@
-name: "Gemini Agent"
-version: "1.0.33"
-slug: "gemini_agent"
-description: "AI Agent with Native Configuration"
+name: "Jarvis AI Professional"
+version: "20.0"
+slug: "jarvis_ai_pro"
+description: "Enterprise-grade AI Agent with SQLite Memory & Native HA Integration"
 startup: application
 boot: auto
 arch:
   - aarch64
   - amd64
   - armv7
+# Δικαιώματα Διαχειριστή για Native API Access
 hassio_api: true
 hassio_role: admin
 options:
   gemini_api_key: ""
-  ha_token: ""  # <--- ΝΕΟ ΠΕΔΙΟ ΓΙΑ ΤΟ TOKEN
   prompt_entity: "input_text.gemini_prompt"
+  history_lookback_default: 24
 schema:
   gemini_api_key: str
-  ha_token: str # <--- ΤΟ ΔΗΛΩΝΟΥΜΕ ΕΔΩ
   prompt_entity: str
+  history_lookback_default: int
