New Docker file

--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -1,21 +1,24 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# 1. Install Python, pip AND dos2unix (για διόρθωση Windows αρχείων)
+# 1. Εγκατάσταση Python & Tools
 RUN apk add --no-cache python3 py3-pip dos2unix
 
-# 2. Install Dependencies (bypass PEP 668 restrictions)
+# 2. Εγκατάσταση Βιβλιοθηκών (με παράκαμψη PEP 668)
 RUN pip install requests google-generativeai pytz python-dateutil --break-system-packages
 
-# 3. Copy τα αρχεία
-COPY run.sh /
+# 3. Αντιγραφή ΜΟΝΟ του κώδικα Python
 COPY agent.py /
 
-# 4. FIX Windows Line Endings & Permissions (Η ΛΥΣΗ ΣΤΟ ΠΡΟΒΛΗΜΑ ΣΟΥ)
-# Το dos2unix θα καθαρίσει τους κρυφούς χαρακτήρες από το run.sh και το agent.py
-RUN dos2unix /run.sh && \
-    dos2unix /agent.py && \
+# Διόρθωση του Python αρχείου από Windows χαρακτήρες (για σιγουριά)
+RUN dos2unix /agent.py
+
+# 4. ΔΗΜΙΟΥΡΓΙΑ του run.sh ΕΣΩΤΕΡΙΚΑ (Η Λύση στο πρόβλημα)
+# Αυτό αγνοεί το αρχείο των Windows και φτιάχνει ένα φρέσκο, καθαρό Linux script.
+RUN echo '#!/usr/bin/with-contenv bashio' > /run.sh && \
+    echo 'bashio::log.info "Starting Jarvis AI Professional (v20.0)..."' >> /run.sh && \
+    echo 'exec python3 -u /agent.py' >> /run.sh && \
     chmod a+x /run.sh
 
-# 5. Start
+# 5. Εκκίνηση
 CMD [ "/run.sh" ]
