--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -1,24 +1,18 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# 1. Εγκατάσταση Python & Tools
+# 1. Εγκατάσταση Python & Tools (Κρατάμε το dos2unix για το agent.py)
 RUN apk add --no-cache python3 py3-pip dos2unix
 
-# 2. Εγκατάσταση Βιβλιοθηκών (με παράκαμψη PEP 668)
+# 2. Εγκατάσταση Βιβλιοθηκών (με bypass για PEP 668)
 RUN pip install requests google-generativeai pytz python-dateutil --break-system-packages
 
 # 3. Αντιγραφή ΜΟΝΟ του κώδικα Python
 COPY agent.py /
 
-# Διόρθωση του Python αρχείου από Windows χαρακτήρες (για σιγουριά)
+# 4. Διόρθωση του Python αρχείου (για να είμαστε σίγουροι)
 RUN dos2unix /agent.py
 
-# 4. ΔΗΜΙΟΥΡΓΙΑ του run.sh ΕΣΩΤΕΡΙΚΑ (Η Λύση στο πρόβλημα)
-# Αυτό αγνοεί το αρχείο των Windows και φτιάχνει ένα φρέσκο, καθαρό Linux script.
-RUN echo '#!/usr/bin/with-contenv bashio' > /run.sh && \
-    echo 'bashio::log.info "Starting Jarvis AI Professional (v20.0)..."' >> /run.sh && \
-    echo 'exec python3 -u /agent.py' >> /run.sh && \
-    chmod a+x /run.sh
-
-# 5. Εκκίνηση
-CMD [ "/run.sh" ]
+# 5. ΕΚΚΙΝΗΣΗ: Τρέχουμε απευθείας την Python
+# Το "-u" είναι σημαντικό για να βλέπεις τα logs αμέσως (unbuffered)
+CMD [ "python3", "-u", "/agent.py" ]
