--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -1,18 +1,23 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# 1. Εγκατάσταση Python & Tools (Κρατάμε το dos2unix για το agent.py)
+# 1. Εγκατάσταση Python & Tools
 RUN apk add --no-cache python3 py3-pip dos2unix
 
 # 2. Εγκατάσταση Βιβλιοθηκών (με bypass για PEP 668)
 RUN pip install requests google-generativeai pytz python-dateutil --break-system-packages
 
-# 3. Αντιγραφή ΜΟΝΟ του κώδικα Python
+# 3. Αντιγραφή του κώδικα Python
 COPY agent.py /
 
-# 4. Διόρθωση του Python αρχείου (για να είμαστε σίγουροι)
+# 4. Διόρθωση του Python αρχείου από Windows χαρακτήρες
 RUN dos2unix /agent.py
 
-# 5. ΕΚΚΙΝΗΣΗ: Τρέχουμε απευθείας την Python
-# Το "-u" είναι σημαντικό για να βλέπεις τα logs αμέσως (unbuffered)
-CMD [ "python3", "-u", "/agent.py" ]
+# 5. ΔΗΜΙΟΥΡΓΙΑ SERVICE (Η Σωστή Μέθοδος για HA Add-ons)
+# Αντί για CMD ή run.sh, φτιάχνουμε το service μέσα στο σύστημα του S6.
+# Αυτό το script δημιουργείται μέσα στο Linux, οπότε δεν έχει πρόβλημα με Windows.
+RUN mkdir -p /etc/services.d/jarvis && \
+    echo '#!/usr/bin/with-contenv bashio' > /etc/services.d/jarvis/run && \
+    echo 'bashio::log.info "Starting Jarvis AI Professional (v20.0)..."' >> /etc/services.d/jarvis/run && \
+    echo 'exec python3 -u /agent.py' >> /etc/services.d/jarvis/run && \
+    chmod +x /etc/services.d/jarvis/run
