--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -10,14 +10,14 @@ RUN pip install requests google-generativeai pytz python-dateutil --break-system
 # 3. Αντιγραφή του κώδικα Python
 COPY agent.py /
 
-# 4. Διόρθωση του Python αρχείου από Windows χαρακτήρες
+# 4. Διόρθωση του Python αρχείου (για να είμαστε 100% σίγουροι)
 RUN dos2unix /agent.py
 
-# 5. ΔΗΜΙΟΥΡΓΙΑ SERVICE (Η Σωστή Μέθοδος για HA Add-ons)
-# Αντί για CMD ή run.sh, φτιάχνουμε το service μέσα στο σύστημα του S6.
-# Αυτό το script δημιουργείται μέσα στο Linux, οπότε δεν έχει πρόβλημα με Windows.
+# 5. ΔΗΜΙΟΥΡΓΙΑ RUN SCRIPT (BARE METAL VERSION)
+# Αφαιρέσαμε το 'with-contenv bashio'. Τώρα είναι απλό Linux script.
+# Δεν θα κρασάρει ποτέ με PID 1 error.
 RUN mkdir -p /etc/services.d/jarvis && \
-    echo '#!/usr/bin/with-contenv bashio' > /etc/services.d/jarvis/run && \
-    echo 'bashio::log.info "Starting Jarvis AI Professional (v20.0)..."' >> /etc/services.d/jarvis/run && \
+    echo '#!/bin/bash' > /etc/services.d/jarvis/run && \
+    echo 'echo "Starting Jarvis AI Professional (v20.0)..."' >> /etc/services.d/jarvis/run && \
     echo 'exec python3 -u /agent.py' >> /etc/services.d/jarvis/run && \
     chmod +x /etc/services.d/jarvis/run
