--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -1,20 +1,21 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# 1. Εγκατάσταση Python & Tools
-RUN apk add --no-cache python3 py3-pip dos2unix
+# 1. Εγκατάσταση Python
+RUN apk add --no-cache python3 py3-pip
 
 # 2. Εγκατάσταση Βιβλιοθηκών (με bypass για PEP 668)
 RUN pip install requests google-generativeai pytz python-dateutil --break-system-packages
 
-# 3. Αντιγραφή του κώδικα Python
-COPY agent.py /
+# 3. Αντιγραφή Python Agent
+COPY agent.py /agent.py
 
-# 4. Διόρθωση του Python αρχείου (για να είμαστε 100% σίγουροι)
-RUN dos2unix /agent.py
-
-# 5. ΔΗΜΙΟΥΡΓΙΑ SERVICE (Με νέο όνομα 'gemini_service' για να αποφύγουμε την cache)
-# Χρησιμοποιούμε /bin/sh που είναι native στο Alpine Linux.
-RUN mkdir -p /etc/services.d/gemini_service && \
-    printf "#!/bin/sh\necho 'Starting Jarvis AI Pro (Clean Service)...'\nexec python3 -u /agent.py\n" > /etc/services.d/gemini_service/run && \
-    chmod +x /etc/services.d/gemini_service/run
+# 4. ΔΗΜΙΟΥΡΓΙΑ SERVICE (THE PERMANENT FIX)
+# - Δημιουργούμε νέο φάκελο service με μοναδικό όνομα για να σπάσουμε την cache
+# - Χρησιμοποιούμε printf για να εγγυηθούμε Linux Line Endings (\n)
+# - Χρησιμοποιούμε exec για να τρέξει η Python ως κύριο process
+RUN mkdir -p /etc/services.d/jarvis_runner && \
+    printf "#!/bin/sh\n\
+echo 'Starting Jarvis AI Pro (Native Mode)...'\n\
+exec python3 -u /agent.py\n" > /etc/services.d/jarvis_runner/run && \
+    chmod +x /etc/services.d/jarvis_runner/run
