new genai library

--- a/gemini_agent/Dockerfile
+++ b/gemini_agent/Dockerfile
@@ -4,14 +4,12 @@ FROM $BUILD_FROM
 # 1. Εγκατάσταση Python
 RUN apk add --no-cache python3 py3-pip dos2unix
 
-# 2. Εγκατάσταση Βιβλιοθηκών (με bypass για PEP 668)
-RUN pip install requests google-generativeai pytz python-dateutil --break-system-packages
+# 2. Εγκατάσταση Νέας Βιβλιοθήκης Google (google-genai)
+RUN pip install requests google-genai pytz python-dateutil --break-system-packages
 
-# 3. Αντιγραφή και Καθαρισμός του Agent
+# 3. Αντιγραφή και Καθαρισμός
 COPY agent.py /agent.py
 RUN dos2unix /agent.py
 
-# 4. ΕΚΚΙΝΗΣΗ (PURE DOCKER)
-# Τρέχουμε απευθείας την Python.
-# Το "-u" είναι κρίσιμο για να βλέπεις τα logs αμέσως (χωρίς buffer).
+# 4. ΕΚΚΙΝΗΣΗ
 ENTRYPOINT ["python3", "-u", "/agent.py"]
